[gd_scene load_steps=14 format=2]

[ext_resource path="res://pongTabuleiro.png" type="Texture" id=1]
[ext_resource path="res://Raquete.tscn" type="PackedScene" id=2]
[ext_resource path="res://Oponente.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bola.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tabuleiro.gd" type="Script" id=5]
[ext_resource path="res://OptimusPrinceps.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ost.wav" type="AudioStream" id=7]
[ext_resource path="res://OponenteMP.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.397, 360 )

[node name="Tabuleiro" type="Node2D"]
position = Vector2( 640, 360 )
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
autoplay = true

[node name="Tabuleiro" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PontuacaoOponente" type="Label" parent="Tabuleiro"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -270.0
margin_right = -640.0
margin_bottom = -346.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PontuacaoJogador" type="Label" parent="Tabuleiro"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1010.0
margin_top = -270.0
margin_right = -640.0
margin_bottom = -360.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raquete" parent="." instance=ExtResource( 2 )]
position = Vector2( -608, 8 )

[node name="Oponente" parent="." instance=ExtResource( 3 )]
position = Vector2( 608, 8 )
script = ExtResource( 8 )

[node name="Bola" parent="." groups=[
"Bola",
] instance=ExtResource( 4 )]

[node name="Bordas" type="StaticBody2D" parent="."]
position = Vector2( 3.05176e-05, 0 )
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="BordaBaixo" type="CollisionShape2D" parent="Bordas"]
position = Vector2( 0, 370.418 )
shape = SubResource( 4 )

[node name="BordaCima" type="CollisionShape2D" parent="Bordas"]
position = Vector2( 0, -369.435 )
shape = SubResource( 4 )

[node name="BordaEsquerda" type="Area2D" parent="."]
position = Vector2( -656, -7.62939e-06 )
__meta__ = {
"_edit_group_": true
}

[node name="ColisaoEsquerda" type="CollisionShape2D" parent="BordaEsquerda"]
shape = SubResource( 5 )

[node name="BordaDireita" type="Area2D" parent="."]
position = Vector2( 656, -7.62939e-06 )
__meta__ = {
"_edit_group_": true
}

[node name="ColisaoDireita" type="CollisionShape2D" parent="BordaDireita"]
shape = SubResource( 5 )

[connection signal="body_entered" from="BordaEsquerda" to="." method="_on_BordaEsquerda_body_entered"]
[connection signal="body_entered" from="BordaDireita" to="." method="_on_BordaDireita_body_entered"]
